--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 <br>
 <br>در ویرایش دوم طراحی برنامه و تعداد بیماریها به نحو چشم گیری ارتقا یافته است</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-5" href="https://github.com/meddata1/med-data-2/raw/master/MED-DATA%202.2.apk" target="_blank"><span class="socicon socicon-android mbr-iconfont mbr-iconfont-btn"></span>دانلود</a></div>
-               <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-5" href="https://cafebazaar.ir/app/ir.med.data.android98025/?l=fa" target="_blank"><span class="socicon socicon-android mbr-iconfont mbr-iconfont-btn"></span>دریافت از بازار</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-5" href="https://github.com/meddata1/med-data-2/raw/master/MED-DATA%202.2.apk" target="_blank"><span class="socicon socicon-android mbr-iconfont mbr-iconfont-btn"></span>دانلود از لینک مستقیم</a></div>
+               <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-5" href="https:/cafebazaar.ir/app/ir.med.data.android98025/?l=fa" target="_blank"><span class="socicon socicon-android mbr-iconfont mbr-iconfont-btn"></span>دریافت از بازار</a></div>
             </div>
 
             <div class="mbr-figure" style="width: 100%;"><iframe class="mbr-embedded-video" src="https://hw19.cdn.asset.aparat.com/aparat-video/6b43864b72c84626efe75a5057873e8514620169-1080p__46635.mp4?loop=0&amp;autoplay=1" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
